# ripping-toolchain

./: .gitignore  LICENSE  README.en.md  README.md  pyproject.toml
misc/: README.md  chapter.sh  clean-audio-tracks.py  find_missing_from_report.py  fix-aspect.py  qsv-test.sh  rename_eps.py  test_rename_eps.py
misc/homeassistant/: README.en.md  README.md  automations.yml
ripper/: makemkv_lang_profile.xml  ripper-example.toml  ripper.py  show-track-info.py
test/: test_fix_aspect.py  test_rescan.py  test_ripper_vob_dir.py  test_transcode_mqtt.py
transcode/: audit_recent_transcodes.py  check-length.py  check_single_audio.py  find_duplicate_filenames.py  install.sh  qsv_reencode.py  rescan.py  transcode-mqtt-logrotate.service  transcode-mqtt-logrotate.timer  transcode-mqtt.service  transcode_mqtt.py
transcode/etc/: transcode-mqtt.env-example  transcode-mqtt.logrotate
transcode/tests/: test_find_duplicate_filenames.py  test_rescan.py  test_transcode_mqtt_queue.py
