[project]
name = "ripping-toolchain"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "test",
    "transcode/tests",
]
